[gd_scene load_steps=12 format=3 uid="uid://42suk7rdo5uj"]

[ext_resource type="Script" path="res://characters/character.gd" id="1_43dcs"]
[ext_resource type="Shader" path="res://assets/shader/dropshadowcut.gdshader" id="2_4ka3q"]
[ext_resource type="Shader" path="res://assets/shader/dropshadow.gdshader" id="2_hvhnt"]
[ext_resource type="PackedScene" uid="uid://defuj8lmd1o31" path="res://characters/skillmachine.tscn" id="4_aidi3"]
[ext_resource type="PackedScene" uid="uid://bn3ogs7bhk847" path="res://characters/skill_idle.tscn" id="5_3d44n"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_t1l3m"]
radius = 0.4
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gp44u"]
radius = 0.4
height = 0.8

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fivk0"]
render_priority = 0
shader = ExtResource("2_4ka3q")
shader_parameter/base_color = Color(0, 0, 0, 1)
shader_parameter/near_far = Vector2(0.1, 100)
shader_parameter/inval = 4.0
shader_parameter/match = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_cwbj0"]
material = SubResource("ShaderMaterial_fivk0")
bottom_radius = 0.0
height = 8.0
radial_segments = 12
rings = 0
cap_bottom = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tw3gn"]
render_priority = 0
shader = ExtResource("2_hvhnt")
shader_parameter/base_color = Color(0, 0, 0, 0.8)
shader_parameter/near_far = Vector2(0.1, 100)
shader_parameter/inval = 0.0
shader_parameter/match = 0.0

[sub_resource type="CylinderMesh" id="CylinderMesh_b3vxf"]
material = SubResource("ShaderMaterial_tw3gn")
bottom_radius = 0.0
height = 8.0
radial_segments = 12
rings = 0
cap_bottom = false

[node name="Character" type="CharacterBody3D"]
collision_layer = 3
collision_mask = 2
script = ExtResource("1_43dcs")
metadata/_edit_lock_ = true

[node name="Collision" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
shape = SubResource("CapsuleShape3D_t1l3m")

[node name="FloorScanArea" type="Area3D" parent="."]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 2

[node name="FlrScnArCol" type="CollisionShape3D" parent="FloorScanArea"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, 0)
shape = SubResource("CapsuleShape3D_gp44u")

[node name="Sprite" type="Sprite3D" parent="."]
unique_name_in_owner = true
pixel_size = 0.04
billboard = 1
double_sided = false
texture_filter = 0

[node name="FloorScanRay" type="RayCast3D" parent="."]
unique_name_in_owner = true
visible = false
enabled = false
collision_mask = 2
hit_from_inside = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
unique_name_in_owner = true
root_node = NodePath("%AnimationPlayer/..")
anim_player = NodePath("..")

[node name="DropShadC" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.7, 0)
mesh = SubResource("CylinderMesh_cwbj0")

[node name="DropShadB" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.7, 0)
mesh = SubResource("CylinderMesh_b3vxf")

[node name="SkillMachine" parent="." instance=ExtResource("4_aidi3")]

[node name="Idle" parent="SkillMachine" instance=ExtResource("5_3d44n")]

[connection signal="body_entered" from="FloorScanArea" to="." method="_on_floor_scan_area_body_entered"]
[connection signal="body_exited" from="FloorScanArea" to="." method="_on_floor_scan_area_body_exited"]
